# secfetch

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
secfetch/: pyproject.toml
secfetch/src/secfetch/: main.py
src/secfetch/: cli.py  firewall.py  network.py  security.py  system.py
src/secfetch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/secfetch/checks/filesystem/: __init__.py  permissions.py
src/secfetch/checks/kernel/: aslr.py  hardening.py  kernel_version.py  lockdown.py  lsm.py
src/secfetch/checks/network/: firewall.py  ipv6.py  ports.py  rp_filter.py  services.py  tcp_syncookies.py
src/secfetch/checks/system/: secureboot.py
src/secfetch/core/: check.py  config.py  engine.py  error_handling.py  loader.py  logger.py  registry.py  runner.py  scanner.py  scoring.py  types.py
src/secfetch/data/: fixes.py  port_db.py
src/secfetch/ui/: colors.py  help.py  improve.py  output.py
tests/: conftest.py  test_checks.py  test_cli.py  test_config.py  test_engine.py  test_error_handling.py  test_filesystem_checks.py  test_help.py  test_improve.py  test_key_consistency.py  test_logger.py  test_network_checks.py  test_output.py  test_port_db.py  test_scoring.py
